# Pivovar

./: README.md  n  n.pub  pyproject.toml  requirements.txt
home/: urls.py  views.py
home/templates/: home.html  onas.html
pivopedia/: apps.py  urls.py  views.py
pivopedia/templates/: pedia.html
ponuka/: admin.py  apps.py  models.py  urls.py  views.py
ponuka/migrations/: 0001_initial.py  0002_remove_beertablerow_number.py  0003_alter_beertablerow_price_021_and_more.py  0004_rozadolvycap_vydricavycap.py
ponuka/templates/: ponuka.html
rezervacie/: admin.py  apps.py  models.py  urls.py  views.py
rezervacie/migrations/: 0001_initial.py
rezervacie/templates/: index.html  m1.html  m2.html  prisla.html
static/css/: styles.css
storefront/: settings.py  urls.py
