[tool.poetry]
name = "storefront"
version = "0.1.0"
description = "pivaren project"
authors = ["marcelopan44@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "storefront" }] 

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"